Fixed burger menu icon visibility.

--- a/src/scss/_menu-icon.scss
+++ b/src/scss/_menu-icon.scss
@@ -9,3 +9,24 @@
         margin-bottom: 2px;
     }
 }
+
+// Hides the buger icon when menu is open.
+
+nav {
+
+    .show {
+
+        &:checked {
+
+            &~ {
+
+                .burger {
+
+                    span {
+                        background-color: transparent;
+                    }
+                }
+            }
+        }
+    }
+}
